# grainsize_measure

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  REVIEW.md  TODO.md  params.json  params_optimized.json  pyproject.toml
docs/: csv_output_guide.md  csv_output_guide_ja.md  generate_doc_images.py  parameter_guide.md  parameter_guide_ja.md
plan/: scale_auto_detect.md
sample_code/: grain_analysis.py  grain_analysis_noedge.py
scripts/: optimize_params.py
src/: analyzer.py  grainsize_measure.bat  grainsize_measure.py  grainsize_measure_cli.py  i18n.py  path_utils.py  scale_detector.py
src/gsat/: grain_size_functions.py  ski_driver_functions.py
src/gui/: dialogs.py  image_canvas.py  image_viewer.py  main_window.py  results_panel.py  settings_dialog.py  settings_panel.py  viewer_window.py  workers.py
src/locales/: messages.pot
tests/: test_analyzer.py
tests/sample/: 20260408_C2600-06tHT600C1hrx200_grain.csv  20260408_C2600-06tHT600C1hrx200_params.json  20260408_C2600-06tx200_params.json  20260408_C2600-06tx200_s_grain.csv  20260408_C2600-06tx200_s_params.json  Optical-micrograph-of-alpha-brass-Cu-30-Zn-alloy-showing-polyhedral-grains-and-the_params.json  analysis.qmd  c2600p_600c60min_grain.csv  c2600p_600c60min_params.json  c2600p_600c60min_params_optimized.json  c2600p_analysis.md  c2600p_analysis.qmd  c2600p_asis.csv  c2600p_asis_better_params.json  c2600p_asis_grain.csv  c2600p_asis_params.json  c2600p_asis_result.csv  c2600p_params_optimized.json  grains_steel_highlighted_params.json  sem_alpha_beta_ti_6al_4v_params.json
(+27 files in other folders)
